# WEFT_OS

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml
crates/weft-app-shell/: Cargo.toml
crates/weft-app-shell/src/: embedder.rs  keyutils.rs  main.rs  shell_client.rs
crates/weft-app-shell/src/protocols/: mod.rs
crates/weft-appd/: Cargo.toml
crates/weft-appd/src/: compositor_client.rs  ipc.rs  main.rs  mount.rs  runtime.rs  ws.rs
crates/weft-build-meta/: Cargo.toml
crates/weft-build-meta/src/: lib.rs
crates/weft-compositor/: Cargo.toml
crates/weft-compositor/src/: appd_ipc.rs  input.rs  main.rs  state.rs
crates/weft-compositor/src/backend/: drm.rs  drm_device.rs  mod.rs  winit.rs
crates/weft-compositor/src/protocols/: mod.rs
crates/weft-file-portal/: Cargo.toml
crates/weft-file-portal/src/: main.rs
crates/weft-ipc-types/: Cargo.toml
crates/weft-ipc-types/src/: lib.rs
crates/weft-mount-helper/: Cargo.toml
crates/weft-mount-helper/src/: main.rs
crates/weft-pack/: Cargo.toml
crates/weft-pack/src/: main.rs
crates/weft-runtime/: Cargo.toml
crates/weft-runtime/src/: main.rs
crates/weft-runtime/wit/: weft-app.wit
crates/weft-servo-shell/: Cargo.toml  SERVO_PIN.md
crates/weft-servo-shell/src/: appd_ws.rs  embedder.rs  main.rs  shell_client.rs
docs/: architecture.md  building.md  security.md
docs/architecture/: app-package-format.md  baseline.md  runtime-wasmtime-integration.md  spidermonkey-bridge-assessment.md  wasm-servo-channel.md  weft-shell-protocol.md  winit-wayland-audit.md
docs/upstream/: servo-audit-backlog.md
examples/keys/: weft-sign.key  weft-sign.pub
examples/org.weft.demo.counter/: Cargo.toml  app.wasm  signature.sig  wapp.toml
examples/org.weft.demo.counter/src/: main.rs
examples/org.weft.demo.counter/ui/: index.html
examples/org.weft.demo.counter/wit/: world.wit
examples/org.weft.demo.notes/: Cargo.toml  app.wasm  signature.sig  wapp.toml
examples/org.weft.demo.notes/src/: main.rs
examples/org.weft.demo.notes/ui/: index.html
examples/org.weft.demo.notes/wit/: world.wit
infra/nixos/: configuration.nix  weft-packages.nix
infra/scripts/: check.ps1  check.sh
infra/shell/: system-ui.html  weft-ui-kit.js
infra/systemd/: servo-shell.service  weft-appd.service  weft-compositor.service
infra/vm/: build.sh  linux-dev-environment.md  run.sh
protocol/: weft-shell-unstable-v1.xml
scripts/: wsl-check.sh  wsl-test.sh
