[workspace]
members = [
    "crates/weft-app-shell",
    "crates/weft-appd",
    "crates/weft-build-meta",
    "crates/weft-compositor",
    "crates/weft-ipc-types",
    "crates/weft-file-portal",
    "crates/weft-mount-helper",
    "crates/weft-pack",
    "crates/weft-runtime",
    "crates/weft-servo-shell",
]
exclude = [
    "examples/org.weft.demo.counter",
    "examples/org.weft.demo.notes",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[workspace.lints.rust]
unsafe_code = "forbid"
