[package]
name = "weft-appd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "weft-appd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
sd-notify = "0.4"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "sync", "process", "time"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
serde_json = "1"
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
