[package]
name = "weft-pack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "weft-pack"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
tar = "0.4"
zstd = "0.13"
