[package]
name = "weft-servo-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "weft-servo-shell"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wayland-client = "0.31"
wayland-backend = "0.3"
wayland-scanner = "0.31"
bitflags = "2"
