[package]
name = "weft-servo-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "weft-servo-shell"
path = "src/main.rs"

[features]
# Enable actual Servo rendering. Deps are declared as optional below and only
# fetched when this feature is active. The Servo monorepo (~1 GB) is not
# downloaded during a plain `cargo check` or `cargo build` without this feature.
servo-embed = ["dep:servo", "dep:winit", "dep:softbuffer"]

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wayland-client = "0.31"
wayland-backend = "0.3"
wayland-scanner = "0.31"
bitflags = "2"
serde_json = "1"
tungstenite = "0.24"

[dependencies.servo]
git = "https://github.com/marcoallegretti/servo"
branch = "servo-weft"
optional = true
default-features = false

[dependencies.winit]
version = "0.30"
optional = true
features = ["wayland"]

[dependencies.softbuffer]
version = "0.4"
optional = true
